# haunt

./: .clang-format  .gitattributes  .gitmodules  ATTRIBUTION.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  TODO.md
core/: CMakeLists.txt
core/include/haunt/: core.h
core/include/haunt/core/: _platform.h  arena.h  assert.h  export.h  graphics.h  input.h  log.h  math.h  simd.h  types.h  window.h
core/src/: arena.c  assert.c  core.c  input.c  input.h  log.c  platform.h  platform_windows.c  platform_windows.h
editor/: CMakeLists.txt
editor/asset/font/scary-momster/: 1001fonts-scary-momster-eula.txt
editor/src/: editor.c
engine/: CMakeLists.txt
engine/assets/shaders/: basic.frag  basic.vert
engine/include/: haunt.h
engine/include/haunt/core/: assert.h  simd.h
engine/include/haunt/math/: angle.h  base.h  generics.h  linalg.h  mat2.h  mat3.h  mat4.h  quat.h  transform.h  types.h  vec2.h  vec3.h  vec4.h
engine/src/: haunt.c  haunt.cpp  haunt.h
engine/src/core/: api.h  assert.h  context.h  event.c  event.h  export.h  inc.c  inc.h  input.c  input.h  log.c  log.h  math.h  mem.c  mem.h  memory.c  memory.h  simd.h  type.h  types.h
engine/src/core/event/: app_event.h  event.c  event.h  event_type.h  key_event.h  mouse_event.h  window_event.h
engine/src/core/input/: input.c  input.h  key.h  key_code.h  key_mod.h  key_sym.h  mouse_button.h  scan_code.h  system.h
engine/src/entry/: app.c  app.h  engine.c  engine.h  inc.c  inc.h  main.h
engine/src/graphics/: color.h  renderer.h  renderer_opengl.c  renderer_opengl.h  shader.c  shader.h
engine/src/math/: angle.h  base.h  constants.h  generics.h  linalg.h  mat2.h  mat3.h  mat4.h  quat.h  transform.h  types.h  util.h  vec2.h  vec3.h  vec4.h  vector2.h  vector3.h  vector4.h
engine/src/platform/: gl.c  gl.h  inc.c  inc.h  platform.h  platform_linux.c  platform_win32.c
engine/src/render/: render.h  render_opengl.c  render_opengl.h
engine/src/renderer/: inc.c  inc.h  opengl.c  opengl.h
example/: CMakeLists.txt
example/001_hello_haunt/: main.c
examples/: CMakeLists.txt
examples/01_hello_world/: hello_world.c
haunt.core/: CMakeLists.txt
haunt.core/include/haunt/: core.h
haunt.core/include/haunt/core/: assert.h  context.h  export.h  log.h  math.h  simd.h  types.h
haunt.core/include/haunt/core/math/: angle.h  base.h  generics.h  linalg.h  mat2.h  mat3.h  mat4.h  quat.h  transform.h  types.h  vec2.h  vec3.h  vec4.h
haunt.core/src/: assert.c  core.c  log.c
haunt.editor/: CMakeLists.txt
haunt.example/: CMakeLists.txt
haunt.examples/: CMakeLists.txt
haunt.examples/001_minimal/: main.c
runtime/: CMakeLists.txt
runtime/include/haunt/: runtime.h
runtime/include/haunt/runtime/: app.h  engine.h
runtime/src/: engine.c
scripts/linux/: build-all.sh  build-editor.sh  build-engine.sh  setup.sh
scripts/windows/: build-all.bat  build-editor.bat  build-engine.bat  setup.bat
scripts/windows/internal/: color.bat  log.bat
